crates/stano-di-macros/tests/ui/component_without_send_sync.stderr
error: #[component] trait must have Send + Sync supertraits
 --> tests/ui/component_without_send_sync.rs:4:7
  |
4 | trait Greeter {
  |       ^^^^^^^
