crates/stano-di-macros/tests/ui/component_without_send_sync.rs
use stano_di_macros::component;

#[component]
trait Greeter {
    fn greet(&self) -> String;
}

fn main() {}
